--- a/tests/Poshley.MSTest/config.tt
+++ b/tests/Poshley.MSTest/config.tt
@@ -16,7 +16,7 @@ using System.IO;
 using System.Linq;
 using Microsoft.VisualStudio.TestTools.UnitTesting;
 
-namespace Acklann.Project
+namespace Acklann.Poshley
 {
 	public static partial class TestDataDirectory
 	{
